Fix File/Save acts always acts like "Save as..."

BUG: 404162

Subscribers: apol, aacid, kde-edu

Tags: #kde_edu

Differential Revision: https://phabricator.kde.org/D19769